k8s-manifests/adjust-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: adjust
  name: adjust-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: adjust
