k8s-manifests/adjust-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: adjust-ingress
spec:
  rules:
  - host: adjust-app.web
    http:
      paths:
      - backend:
          service:
            name: adjust-service
            port:
              number: 8080
        path: /
        pathType: Prefix
